--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,18 @@
 <h1>プロフィール詳細</h1>
 
+
+
+<% if current_user.present? && current_user != @user && current_user.following?(@user) %>
+  <%= link_to user_relationships_path(@user.id), method: :delete do %>
+    <button type="button" class="btn btn btn-danger">フォローを外す</button>
+  <% end %>
+<% elsif current_user.present? && current_user != @user %>
+  <%= link_to user_relationships_path(@user.id), method: :post do %>
+    <button type="button" class="btn btn btn-primary">フォローする</button>
+  <% end %>
+<% end %>
+<br>
+<br>
 <h3>ユーザー名</h3>
 <%= @user.name %>
 <h3>メールアドレス</h3>
